--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/themes": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
@@ -25,7 +26,7 @@
     "react-icons": "^4.12.0",
     "sass": "^1.69.7",
     "tailwind-fluid-typography": "^1.3.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-fluid-type": "^2.0.3"
   },
